<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/heading_main"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="ProfileReza"
        android:text="@string/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_main" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="408dp"
        android:layout_height="355dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/title_text_main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_tautan"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/tautan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tautan_button" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/title_text_main2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_tautan"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/tautan_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tautan_button" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/title_text_main3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_tautan"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/tautan_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tautan_button" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/title_text_main4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_tautan"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/tautan_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tautan_button" />

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/title_text_main5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_tautan"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/tautan_button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tautan_button" />

            <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/profile_buttonyp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ProfileYudha"
        android:text="@string/profile_buttonyp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_main" />

</androidx.constraintlayout.widget.ConstraintLayout>
